--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Anish Tamang</strong>, a Data Analyst<br />
+					<h1>Hi, I'm <strong>Anish Tamang</strong>, The Data Analyst<br />
 					currently working at Adelaide Primary Health Network.</h1>
 					<p>Originally from Nepal, I'm currently residing in Adelaide, South Australia.<br />
 					</p>
